[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/targets/computer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/level-intro.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/enemy/spawn-point.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/powerups/powerup-spawn-point.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/dialogue-system.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/targets/super-computer.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/scene-manager.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/cyber-tileset.tres" type="TileSet" id=9]
[ext_resource path="res://src/enemy/resources/virus-boss.png" type="Texture" id=10]
[ext_resource path="res://levels/boss-level.gd" type="Script" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.8547, 8.97761 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 1

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )
width = 1

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 0.40625, 1, 0, 1, 0.195312, 1, 0, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )
width = 1

[node name="Boss_level" type="Node2D"]
script = ExtResource( 11 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196613, 18, 0, -196612, 18, 0, -196611, 18, 0, -196610, 18, 0, -196609, 18, 0, -262144, 18, 0, -262143, 18, 0, -262142, 18, 0, -262141, 18, 0, -262140, 18, 0, -131077, 18, 0, -131076, 18, 0, -131075, 18, 0, -131074, 18, 0, -131073, 18, 0, -196608, 18, 0, -196607, 18, 0, -196606, 18, 0, -196605, 18, 0, -196604, 18, 0, -65541, 18, 0, -65540, 18, 0, -65539, 18, 0, -65538, 18, 0, -65537, 18, 0, -131072, 18, 0, -131070, 18, 0, -131069, 18, 0, -131068, 18, 0, -5, 18, 0, -4, 18, 0, -3, 18, 0, -2, 18, 0, -1, 18, 0, -65536, 18, 0, -65535, 18, 0, -65534, 18, 0, -65533, 18, 0, -65532, 18, 0, 65531, 18, 0, 65532, 18, 0, 65533, 18, 0, 65534, 18, 0, 65535, 18, 0, 0, 18, 0, 1, 18, 0, 2, 18, 0, 3, 18, 0, 4, 18, 0, 131067, 18, 0, 131068, 18, 0, 131069, 18, 0, 131070, 18, 0, 131071, 18, 0, 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 18, 0, 196595, 18, 0, 196596, 18, 0, 196597, 18, 0, 196598, 18, 0, 196599, 18, 0, 196600, 18, 0, 196601, 18, 0, 196602, 18, 0, 196603, 18, 0, 196604, 18, 0, 196605, 18, 0, 196606, 18, 0, 196607, 18, 0, 131072, 18, 0, 131073, 18, 0, 131074, 18, 0, 131075, 18, 0, 131076, 18, 0, 131077, 18, 0, 131078, 18, 0, 131079, 18, 0, 131080, 18, 0, 131081, 18, 0, 131082, 18, 0, 131083, 18, 0, 262131, 18, 0, 262132, 18, 0, 262133, 18, 0, 262134, 18, 0, 262135, 18, 0, 262136, 18, 0, 262137, 18, 0, 262138, 18, 0, 262139, 18, 0, 262140, 18, 0, 262141, 18, 0, 262142, 18, 0, 262143, 18, 0, 196608, 18, 0, 196609, 18, 0, 196610, 18, 0, 196611, 18, 0, 196612, 18, 0, 196613, 18, 0, 196614, 18, 0, 196615, 18, 0, 196616, 18, 0, 196617, 18, 0, 196618, 18, 0, 196619, 18, 0, 196620, 18, 0, 327667, 18, 0, 327668, 18, 0, 327669, 18, 0, 327670, 18, 0, 327671, 18, 0, 327672, 18, 0, 327673, 18, 0, 327674, 18, 0, 327675, 18, 0, 327676, 18, 0, 327677, 18, 0, 327678, 18, 0, 327679, 18, 0, 262144, 18, 0, 262145, 18, 0, 262146, 18, 0, 262147, 18, 0, 262148, 18, 0, 262149, 18, 0, 262150, 18, 0, 262151, 18, 0, 262152, 18, 0, 262153, 18, 0, 262154, 18, 0, 262155, 18, 0, 262156, 18, 0, 393203, 18, 0, 393204, 18, 0, 393205, 18, 0, 393206, 18, 0, 393207, 18, 0, 393208, 18, 0, 393209, 18, 0, 393210, 18, 0, 393211, 18, 0, 393212, 18, 0, 393213, 18, 0, 393214, 18, 0, 393215, 18, 0, 327680, 18, 0, 327681, 18, 0, 327682, 18, 0, 327683, 18, 0, 327684, 18, 0, 327685, 18, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327689, 18, 0, 327690, 18, 0, 327691, 18, 0, 327692, 18, 0, 458739, 18, 0, 458740, 18, 0, 458741, 18, 0, 458742, 18, 0, 458743, 18, 0, 458744, 18, 0, 458745, 18, 0, 458746, 18, 0, 458747, 18, 0, 458748, 18, 0, 458749, 18, 0, 458750, 18, 0, 458751, 18, 0, 393216, 18, 0, 393217, 18, 0, 393218, 18, 0, 393219, 18, 0, 393220, 18, 0, 393221, 18, 0, 393222, 18, 0, 393223, 18, 0, 393224, 18, 0, 393225, 18, 0, 393226, 18, 0, 393227, 18, 0, 393228, 18, 0, 524275, 18, 0, 524276, 18, 0, 524277, 18, 0, 524278, 18, 0, 524279, 18, 0, 524280, 18, 0, 524281, 18, 0, 524282, 18, 0, 524283, 18, 0, 524284, 18, 0, 524285, 18, 0, 524286, 18, 0, 524287, 18, 0, 458752, 18, 0, 458753, 18, 0, 458754, 18, 0, 458755, 18, 0, 458756, 18, 0, 458757, 18, 0, 458758, 18, 0, 458759, 18, 0, 458760, 18, 0, 458761, 18, 0, 458762, 18, 0, 458763, 18, 0, 458764, 18, 0, 589811, 18, 0, 589812, 18, 0, 589813, 18, 0, 589814, 18, 0, 589815, 18, 0, 589816, 18, 0, 589817, 18, 0, 589818, 18, 0, 589819, 18, 0, 589820, 18, 0, 589821, 18, 0, 589822, 18, 0, 589823, 18, 0, 524288, 18, 0, 524289, 18, 0, 524290, 18, 0, 524291, 18, 0, 524292, 18, 0, 524293, 18, 0, 524294, 18, 0, 524295, 18, 0, 524296, 18, 0, 524297, 18, 0, 524298, 18, 0, 524299, 18, 0, 524300, 18, 0, 655347, 18, 0, 655348, 18, 0, 655349, 18, 0, 655350, 18, 0, 655351, 18, 0, 655352, 18, 0, 655353, 18, 0, 655354, 18, 0, 655355, 18, 0, 655356, 18, 0, 655357, 18, 0, 655358, 18, 0, 655359, 18, 0, 589824, 18, 0, 589825, 18, 0, 589826, 18, 0, 589827, 18, 0, 589828, 18, 0, 589829, 18, 0, 589830, 18, 0, 589831, 18, 0, 589832, 18, 0, 589833, 18, 0, 589834, 18, 0, 589835, 18, 0, 589836, 18, 0, 720883, 18, 0, 720884, 18, 0, 720885, 18, 0, 720886, 18, 0, 720887, 18, 0, 720888, 18, 0, 720889, 18, 0, 720890, 18, 0, 720891, 18, 0, 720892, 18, 0, 720893, 18, 0, 720894, 18, 0, 720895, 18, 0, 655360, 18, 0, 655361, 18, 0, 655362, 18, 0, 655363, 18, 0, 655364, 18, 0, 655365, 18, 0, 655366, 18, 0, 655367, 18, 0, 655368, 18, 0, 655369, 18, 0, 655370, 18, 0, 655371, 18, 0, 655372, 18, 0, 786419, 18, 0, 786420, 18, 0, 786421, 18, 0, 786422, 18, 0, 786423, 18, 0, 786424, 18, 0, 786425, 18, 0, 786426, 18, 0, 786427, 18, 0, 786428, 18, 0, 786429, 18, 0, 786430, 18, 0, 786431, 18, 0, 720896, 18, 0, 720897, 18, 0, 720898, 18, 0, 720899, 18, 0, 720900, 18, 0, 720901, 18, 0, 720902, 18, 0, 720903, 18, 0, 720904, 18, 0, 720905, 18, 0, 720906, 18, 0, 720907, 18, 0, 720908, 18, 0, 851955, 18, 0, 851956, 18, 0, 851957, 18, 0, 851958, 18, 0, 851959, 18, 0, 851960, 18, 0, 851961, 18, 0, 851962, 18, 0, 851963, 18, 0, 851964, 18, 0, 851965, 18, 0, 851966, 18, 0, 851967, 18, 0, 786432, 18, 0, 786433, 18, 0, 786434, 18, 0, 786435, 18, 0, 786436, 18, 0, 786437, 18, 0, 786438, 18, 0, 786439, 18, 0, 786440, 18, 0, 786441, 18, 0, 786442, 18, 0, 786443, 18, 0, 786444, 18, 0, 917491, 18, 0, 917492, 18, 0, 917493, 18, 0, 917494, 18, 0, 917495, 18, 0, 917496, 18, 0, 917497, 18, 0, 917498, 18, 0, 917499, 18, 0, 917500, 18, 0, 917501, 18, 0, 917502, 18, 0, 917503, 18, 0, 851968, 18, 0, 851969, 18, 0, 851970, 18, 0, 851971, 18, 0, 851972, 18, 0, 851973, 18, 0, 851974, 18, 0, 851975, 18, 0, 851976, 18, 0, 851977, 18, 0, 851978, 18, 0, 851979, 18, 0, 851980, 18, 0, 983027, 18, 0, 983028, 18, 0, 983029, 18, 0, 983030, 18, 0, 983031, 18, 0, 983032, 18, 0, 983033, 18, 0, 983034, 18, 0, 983035, 18, 0, 983036, 18, 0, 983037, 18, 0, 983038, 18, 0, 983039, 18, 0, 917504, 18, 0, 917505, 18, 0, 917506, 18, 0, 917507, 18, 0, 917508, 18, 0, 917509, 18, 0, 917510, 18, 0, 917511, 18, 0, 917512, 18, 0, 917513, 18, 0, 917514, 18, 0, 917515, 18, 0, 917516, 18, 0, 1048563, 18, 0, 1048564, 18, 0, 1048565, 18, 0, 1048566, 18, 0, 1048567, 18, 0, 1048568, 18, 0, 1048569, 18, 0, 1048570, 18, 0, 1048571, 18, 0, 1048572, 18, 0, 1048573, 18, 0, 1048574, 18, 0, 1048575, 18, 0, 983040, 18, 0, 983041, 18, 0, 983042, 18, 0, 983043, 18, 0, 983044, 18, 0, 983045, 18, 0, 983046, 18, 0, 983047, 18, 0, 983048, 18, 0, 983049, 18, 0, 983050, 18, 0, 983051, 18, 0, 983052, 18, 0, 1114099, 18, 0, 1114100, 18, 0, 1114101, 18, 0, 1114102, 18, 0, 1114103, 18, 0, 1114104, 18, 0, 1114105, 18, 0, 1114106, 18, 0, 1114107, 18, 0, 1114108, 18, 0, 1114109, 18, 0, 1114110, 18, 0, 1114111, 18, 0, 1048576, 18, 0, 1048577, 18, 0, 1048578, 18, 0, 1048579, 18, 0, 1048580, 18, 0, 1048581, 18, 0, 1048582, 18, 0, 1048583, 18, 0, 1048584, 18, 0, 1048585, 18, 0, 1048586, 18, 0, 1048587, 18, 0, 1048588, 18, 0, 1179635, 18, 0, 1179636, 18, 0, 1179637, 18, 0, 1179638, 18, 0, 1179639, 18, 0, 1179640, 18, 0, 1179641, 18, 0, 1179642, 18, 0, 1179643, 18, 0, 1179644, 18, 0, 1179645, 18, 0, 1179646, 18, 0, 1179647, 18, 0, 1114112, 18, 0, 1114113, 18, 0, 1114114, 18, 0, 1114115, 18, 0, 1114116, 18, 0, 1114117, 18, 0, 1114118, 18, 0, 1114119, 18, 0, 1114120, 18, 0, 1114121, 18, 0, 1114122, 18, 0, 1114123, 18, 0, 1114124, 18, 0, 1245171, 18, 0, 1245172, 18, 0, 1245173, 18, 0, 1245174, 18, 0, 1245175, 18, 0, 1245176, 18, 0, 1245177, 18, 0, 1245178, 18, 0, 1245179, 18, 0, 1245180, 18, 0, 1245181, 18, 0, 1245182, 18, 0, 1245183, 18, 0, 1179648, 18, 0, 1179649, 18, 0, 1179650, 18, 0, 1179651, 18, 0, 1179652, 18, 0, 1179653, 18, 0, 1179654, 18, 0, 1179655, 18, 0, 1179656, 18, 0, 1179657, 18, 0, 1179658, 18, 0, 1179659, 18, 0, 1179660, 18, 0, 1310707, 18, 0, 1310708, 18, 0, 1310709, 18, 0, 1310710, 18, 0, 1310711, 18, 0, 1310712, 18, 0, 1310713, 18, 0, 1310714, 18, 0, 1310715, 18, 0, 1310716, 18, 0, 1310717, 18, 0, 1310718, 18, 0, 1310719, 18, 0, 1245184, 18, 0, 1245185, 18, 0, 1245186, 18, 0, 1245187, 18, 0, 1245188, 18, 0, 1245189, 18, 0, 1245190, 18, 0, 1245191, 18, 0, 1245192, 18, 0, 1245193, 18, 0, 1245194, 18, 0, 1245195, 18, 0, 1245196, 18, 0, 1376243, 18, 0, 1376244, 18, 0, 1376245, 18, 0, 1376246, 18, 0, 1376247, 18, 0, 1376248, 18, 0, 1376249, 18, 0, 1376250, 18, 0, 1376251, 18, 0, 1376252, 18, 0, 1376253, 18, 0, 1376254, 18, 0, 1376255, 18, 0, 1310720, 18, 0, 1310721, 18, 0, 1310722, 18, 0, 1310723, 18, 0, 1310724, 18, 0, 1310725, 18, 0, 1310726, 18, 0, 1310727, 18, 0, 1310728, 18, 0, 1310729, 18, 0, 1310730, 18, 0, 1310731, 18, 0, 1310732, 18, 0, 1441779, 18, 0, 1441780, 18, 0, 1441781, 18, 0, 1441782, 18, 0, 1441783, 18, 0, 1441784, 18, 0, 1441785, 18, 0, 1441786, 18, 0, 1441787, 18, 0, 1441788, 18, 0, 1441789, 18, 0, 1441790, 18, 0, 1441791, 18, 0, 1376256, 18, 0, 1376257, 18, 0, 1376258, 18, 0, 1376259, 18, 0, 1376260, 18, 0, 1376261, 18, 0, 1376262, 18, 0, 1376263, 18, 0, 1376264, 18, 0, 1376265, 18, 0, 1376266, 18, 0, 1376267, 18, 0, 1376268, 18, 0, 1507315, 18, 0, 1507316, 18, 0, 1507317, 18, 0, 1507318, 18, 0, 1507319, 18, 0, 1507320, 18, 0, 1507321, 18, 0, 1507322, 18, 0, 1507323, 18, 0, 1507324, 18, 0, 1507325, 18, 0, 1507326, 18, 0, 1507327, 18, 0, 1441792, 18, 0, 1441793, 18, 0, 1441794, 18, 0, 1441795, 18, 0, 1441796, 18, 0, 1441797, 18, 0, 1441798, 18, 0, 1441799, 18, 0, 1441800, 18, 0, 1441801, 18, 0, 1441802, 18, 0, 1441803, 18, 0, 1441804, 18, 0, 1572851, 18, 0, 1572852, 18, 0, 1572853, 18, 0, 1572854, 18, 0, 1572855, 18, 0, 1572856, 18, 0, 1572857, 18, 0, 1572858, 18, 0, 1572859, 18, 0, 1572860, 18, 0, 1572861, 18, 0, 1572862, 18, 0, 1572863, 18, 0, 1507328, 18, 0, 1507329, 18, 0, 1507330, 18, 0, 1507331, 18, 0, 1507332, 18, 0, 1507333, 18, 0, 1507334, 18, 0, 1507335, 18, 0, 1507336, 18, 0, 1507337, 18, 0, 1507338, 18, 0, 1507339, 18, 0, 1507340, 18, 0 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65537, 7, 0, -131072, 7, 0, -1, 7, 0, -65536, 7, 0, 65534, 7, 0, 65535, 7, 0, 0, 7, 0, 1, 7, 0, 131070, 7, 0, 131071, 7, 0, 65536, 7, 0, 65537, 7, 0, 196606, 7, 0, 196607, 7, 0, 131072, 7, 0, 131073, 7, 0, 262142, 7, 0, 262143, 7, 0, 196608, 7, 0, 196609, 7, 0, 327678, 7, 0, 327679, 7, 0, 262144, 7, 0, 262145, 7, 0, 393214, 7, 0, 393215, 7, 0, 327680, 7, 0, 327681, 7, 0, 458750, 7, 0, 458751, 7, 0, 393216, 7, 0, 393217, 7, 0, 524286, 7, 0, 524287, 7, 0, 458752, 7, 0, 458753, 7, 0, 589822, 7, 0, 589823, 7, 0, 524288, 7, 0, 524289, 7, 0, 655358, 7, 0, 655359, 7, 0, 589824, 7, 0, 589825, 7, 0, 720894, 7, 0, 720895, 7, 0, 655360, 7, 0, 655361, 7, 0, 786430, 7, 0, 786431, 7, 0, 720896, 7, 0, 720897, 7, 0, 851966, 7, 0, 851967, 7, 0, 786432, 7, 0, 786433, 7, 0, 917502, 7, 0, 917503, 7, 0, 851968, 7, 0, 851969, 7, 0, 983038, 7, 0, 983039, 7, 0, 917504, 7, 0, 917505, 7, 0, 1048574, 7, 0, 1048575, 7, 0, 983040, 7, 0, 983041, 7, 0, 1114110, 7, 0, 1114111, 7, 0, 1048576, 7, 0, 1048577, 7, 0, 1179646, 7, 0, 1179647, 7, 0, 1114112, 7, 0, 1114113, 7, 0, 1245182, 7, 0, 1245183, 7, 0, 1179648, 7, 0, 1179649, 7, 0, 1310711, 6, 0, 1310712, 6, 0, 1310713, 6, 0, 1310714, 6, 0, 1310715, 6, 0, 1310716, 6, 0, 1310717, 6, 0, 1310718, 6, 0, 1310719, 6, 0, 1245184, 6, 0, 1245185, 6, 0, 1245186, 6, 0, 1245187, 6, 0, 1245188, 6, 0, 1245189, 6, 0, 1245190, 6, 0, 1245191, 6, 0, 1245192, 6, 0, 1376247, 6, 0, 1376248, 6, 0, 1376249, 6, 0, 1376250, 6, 0, 1376251, 6, 0, 1376252, 6, 0, 1376253, 6, 0, 1376254, 6, 0, 1376255, 6, 0, 1310720, 6, 0, 1310721, 6, 0, 1310722, 6, 0, 1310723, 6, 0, 1310724, 6, 0, 1310725, 6, 0, 1310726, 6, 0, 1310727, 6, 0, 1310728, 6, 0 )

[node name="Building" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262149, 14, 0, -262148, 2, 0, -262147, 2, 0, -262146, 2, 0, -262145, 2, 0, -327680, 2, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 15, 0, -196613, 5, 0, -262140, 5, 0, -131077, 5, 0, -196604, 5, 0, -65541, 5, 0, -131068, 5, 0, -5, 5, 0, -65532, 5, 0, 65531, 5, 0, 4, 5, 0, 131067, 5, 0, 65540, 5, 0, 196594, 14, 0, 196595, 2, 0, 196596, 2, 0, 196597, 2, 0, 196598, 2, 0, 196599, 2, 0, 196600, 2, 0, 196601, 2, 0, 196602, 2, 0, 196603, 17, 0, 131076, 16, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 15, 0, 262130, 5, 0, 196621, 5, 0, 327666, 5, 0, 262157, 5, 0, 393202, 5, 0, 393213, 0, 0, 327682, 0, 0, 327693, 5, 0, 458738, 5, 0, 458749, 1, 0, 393218, 1, 0, 393229, 5, 0, 524274, 5, 0, 458765, 5, 0, 589810, 5, 0, 524301, 5, 0, 655346, 5, 0, 589837, 5, 0, 720882, 5, 0, 720893, 0, 0, 655362, 0, 0, 655373, 5, 0, 786418, 5, 0, 786429, 1, 0, 720898, 1, 0, 720909, 5, 0, 851954, 5, 0, 786445, 5, 0, 917490, 5, 0, 851981, 5, 0, 983026, 5, 0, 917517, 5, 0, 1048562, 5, 0, 1048573, 0, 0, 983042, 0, 0, 983053, 5, 0, 1114098, 5, 0, 1114109, 1, 0, 1048578, 1, 0, 1048589, 5, 0, 1179634, 5, 0, 1114125, 5, 0, 1245170, 5, 0, 1179661, 5, 0, 1310706, 5, 0, 1245197, 5, 0, 1376242, 5, 0, 1310733, 5, 0, 1441778, 5, 0, 1376269, 5, 0, 1507314, 5, 0, 1441805, 5, 0, 1572850, 5, 0, 1507341, 5, 0, 1638386, 16, 0, 1638387, 2, 0, 1638388, 2, 0, 1638389, 2, 0, 1638390, 2, 0, 1638391, 2, 0, 1638392, 2, 0, 1638393, 2, 0, 1638394, 2, 0, 1638395, 2, 0, 1638396, 2, 0, 1638397, 2, 0, 1638398, 2, 0, 1638399, 2, 0, 1572864, 2, 0, 1572865, 2, 0, 1572866, 2, 0, 1572867, 2, 0, 1572868, 2, 0, 1572869, 2, 0, 1572870, 2, 0, 1572871, 2, 0, 1572872, 2, 0, 1572873, 2, 0, 1572874, 2, 0, 1572875, 2, 0, 1572876, 2, 0, 1572877, 17, 0 )

[node name="Boss" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="AnimatedSprite" parent="Boss"]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2( 2.10611, -14.2039 )
shape = SubResource( 4 )

[node name="progress_bar" type="Node2D" parent="Boss"]
position = Vector2( -22.5331, -28.5209 )

[node name="outline" type="Sprite" parent="Boss/progress_bar"]
position = Vector2( -1, 1 )
rotation = 3.14159
scale = Vector2( 52, -5 )
texture = SubResource( 6 )

[node name="under" type="Sprite" parent="Boss/progress_bar"]
scale = Vector2( -50, 3 )
texture = SubResource( 8 )

[node name="over" type="Sprite" parent="Boss/progress_bar"]
scale = Vector2( -50, 3 )
texture = SubResource( 10 )

[node name="scene_manager" parent="." instance=ExtResource( 8 )]
retry_scene = "res://levels/boss-level.tscn"
wave_length = 1000
wave_multiplier = 6
enemies = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue_system" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="Level_intro" parent="CanvasLayer" instance=ExtResource( 3 )]
text = "Level 06 - The Boss"

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -2.58943, 107.548 )

[node name="Computer" parent="." instance=ExtResource( 2 )]
position = Vector2( -129.766, 321.163 )
frame = 1

[node name="Computer2" parent="." instance=ExtResource( 2 )]
position = Vector2( 130.34, 321.478 )

[node name="Super_computer" parent="." instance=ExtResource( 7 )]
position = Vector2( -0.519501, 324.313 )
frame = 1

[node name="spawn_points" type="Node2D" parent="."]

[node name="Spawn_point" parent="spawn_points" instance=ExtResource( 4 )]
position = Vector2( 0.428985, -133.005 )

[node name="Spawn_point2" parent="spawn_points" instance=ExtResource( 4 )]
position = Vector2( -107.91, -99.2681 )

[node name="Spawn_point3" parent="spawn_points" instance=ExtResource( 4 )]
position = Vector2( 108.991, -103.241 )

[node name="Spawn_point4" parent="spawn_points" instance=ExtResource( 4 )]
position = Vector2( 156.76, -26.5703 )

[node name="Spawn_point5" parent="spawn_points" instance=ExtResource( 4 )]
position = Vector2( -163.24, -27.0703 )

[node name="Spawn_point6" parent="spawn_points" instance=ExtResource( 4 )]
position = Vector2( -282.458, 47.2551 )

[node name="Spawn_point7" parent="spawn_points" instance=ExtResource( 4 )]
position = Vector2( 302.335, 44.8767 )

[node name="pu_spawn_points" type="Node2D" parent="."]

[node name="Powerup_spawn_point" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( -160.481, 101.581 )

[node name="Powerup_spawn_point2" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( -84.571, 101.581 )

[node name="Powerup_spawn_point3" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( 81.2956, 101.581 )

[node name="Powerup_spawn_point4" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( 160.356, 101.581 )

[node name="Powerup_spawn_point5" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( -160.481, 180.452 )

[node name="Powerup_spawn_point6" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( -84.571, 180.452 )

[node name="Powerup_spawn_point7" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( 81.2956, 180.452 )

[node name="Powerup_spawn_point8" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( 160.356, 180.452 )

[node name="Powerup_spawn_point9" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( -160.481, 257.747 )

[node name="Powerup_spawn_point10" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( -84.571, 257.747 )

[node name="Powerup_spawn_point11" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( 81.2956, 257.747 )

[node name="Powerup_spawn_point12" parent="pu_spawn_points" instance=ExtResource( 5 )]
position = Vector2( 160.356, 257.747 )

[node name="Timer" type="Timer" parent="."]

[node name="Hit_timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="boss_damage" from="." to="." method="_on_Boss_level_boss_damage"]
[connection signal="area_entered" from="Boss" to="." method="_on_Boss_area_entered"]
[connection signal="finished_dialogue" from="CanvasLayer/Dialogue_system" to="." method="_on_Dialogue_system_finished_dialogue"]
[connection signal="end_level_intro" from="CanvasLayer/Level_intro" to="." method="_on_Level_intro_end_level_intro"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Hit_timer" to="." method="_on_Hit_timer_timeout"]
